kubernetes/infra/kube-system/goldilocks/app/ingress-tailscale.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.k8s.io/ingress_v1.json
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app goldilocks-tailscale
  namespace: kube-system
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  annotations:
    tailscale.com/hostname: goldilocks
    tailscale.com/force-reconcile: "2"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - goldilocks.rya-bebop.ts.net
  rules:
    - host: goldilocks.rya-bebop.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: goldilocks-dashboard
                port:
                  number: 80
